[package]
name = "disorderd"
version = "0.1.0"
description = ";"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "disorderd"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"

zk_disorder = "0.1.1"


borsh = { version = "1.0", features = ["derive"]}



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
